--- a/styles.css
+++ b/styles.css
@@ -65,15 +65,13 @@ body{
     font-family: sans-serif;
     font-weight: 600;
     font-size: 16px;
-    background-color: #8BC6EC;
-background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+    background-color: white;
 
 }
 .btn:hover{
     
    transition: all 1000ms ease-in-out;
    transform: translateY(-5px); 
-   background-image: linear-gradient( 102.4deg,  rgba(253,189,85,1) 7.8%, rgba(249,131,255,1) 100.3% );
 }
 
 
@@ -83,22 +81,43 @@ background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
         font-family: 'Crimson Text',serif;
         font-weight: 400;
         color: white;
-        font-size: 16px;
+        font-size: 24px;
     }
+   
+     }
     .btn{
         width: 30%;
         font-size: 10px;
         transition: all 1s;
     }
     .author-NAME{
-        font-size: 16px;
+        font-size: 20px;
         font-weight: bold;
     }
     button.btn:hover{
         background-image: black;
-        transform: rotateY(-9px);
+        
     }
-    
-    
+    .container{
+        width: 80vw;
+        height: auto;
+    }
+
+@media only screen and (min-width:1080px) {
+    .container{
+        width: 700px;
+        height:auto;
+    }
+    .quote{
+        font-size: 32px;
+    }
+    .author-NAME{
+        font-size: 24px;
+    }
+    .btn{
+        font-size: 16px;
+    }
 }
+    
+
 
